
    HADOOP-12780. During atomic rename handle crash when one directory has been
    renamed but not file under it. (Madhumita Chakraborty via cnauroth)

    HADOOP-12795. KMS does not log detailed stack trace for unexpected errors.
    (cnauroth)

    HADOOP-12878. KMS SPNEGO sequence does not work with WEBHDFS. (xyao)

    HADOOP-12846. Credential Provider Recursive Dependencies.
    (Larry McCay via cnauroth)

    HADOOP-12903. IPC Server should allow suppressing exception logging by type,
    not log 'server too busy' messages. (Arpit Agarwal)

    HADOOP-12813. Migrate TestRPC and related codes to rebase on
    ProtobufRpcEngine. (Kai Zheng via wheat9)

    HADOOP-12589. Fix intermittent test failure of TestCopyPreserveFlag
    (iwasakims)

    HADOOP-12851. S3AFileSystem Uptake of
    ProviderUtils.excludeIncompatibleCredentialProviders.
    (Larry McCay via cnauroth)

    HADOOP-12682. Fix TestKMS#testKMSRestart* failure.
    (Wei-Chiu Chuang via xyao)

    HADOOP-12706. TestLocalFsFCStatistics#testStatisticsThreadLocalDataCleanUp
    times out occasionally (Sangjin Lee and Colin Patrick McCabe via jlowe)

Release 2.7.2 - UNRELEASED

  INCOMPATIBLE CHANGES

  NEW FEATURES

    HADOOP-9477. Add posixGroups support for LDAP groups mapping service.
    (Dapeng Sun via Yongjun Zhang)

  IMPROVEMENTS

  OPTIMIZATIONS

  BUG FIXES

    HADOOP-12304. Applications using FileContext fail with the default file
    system configured to be wasb/s3/etc. (cnauroth)

    HADOOP-11932. MetricsSinkAdapter may hang  when being stopped.
    (Brahma Reddy Battula via jianhe)

    HADOOP-12213. Interrupted exception can occur when Client#stop is called.
    (Kuhu Shukla via ozawa)

    HADOOP-12191. Bzip2Factory is not thread safe. (Brahma Reddy Battula
    via ozawa)

    HADOOP-12464. Interrupted client may try to fail-over and retry (kihwal)

Release 2.7.1 - 2015-07-06 

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS
